# mp2d_cpp

./: CMakeLists.txt  Coord_Num.cpp  Coord_Num.h  Coord_Num_Working_7_17_2018.cpp  Dispersion.cpp  Dispersion.h  Dispersion_5_22_2018_WORKING.cpp  LICENSE  Main.cpp  Main_original_4_3_2018.cpp  README.md  compile_2.sh
updated/: CMakeLists.txt  Coord_Num.cpp  GrimmeC6.txt  Params.txt  README.txt  makefile
